SubReddit v2/objects/Post__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Comments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Of Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Downvotes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Of Downvotes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Upvotes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Of Upvotes</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubReddit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubReddit</label>
        <referenceTo>SubReddit__c</referenceTo>
        <relationshipLabel>Posts</relationshipLabel>
        <relationshipName>Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Post</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Post Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>